--- a/index.html
+++ b/index.html
@@ -7,25 +7,33 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #0d0d0d;
-      color: #e0e0e0; /* Normal readable text */
       margin: 0;
-      padding: 20px;
+      padding: 0;
       line-height: 1.6;
+      color: #e0e0e0;
+      background: url("image.jpeg") no-repeat center center fixed;
+      background-size: cover;
+      position: relative;
     }
+
+    /* Dark translucent overlay */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      z-index: 0;
+    }
+
     .container {
+      position: relative;
+      z-index: 1; /* Keeps content above overlay */
       max-width: 800px;
       margin: auto;
+      padding: 40px 20px;
     }
-    .banner {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    .banner img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 6px;
-    }
+
     h1 {
       text-align: center;
       font-size: 60px;
@@ -35,19 +43,22 @@
                    0 0 40px #00ff00;
       margin-bottom: 40px;
     }
+
     .question {
-      background: #1a1a1a;
+      background: rgba(20, 20, 20, 0.85);
       padding: 20px;
       margin: 20px 0;
       border: 1px solid #333;
       border-radius: 6px;
     }
+
     .question h2 {
       margin-top: 0;
       font-size: 18px;
       font-weight: bold;
-      color: #e0e0e0; /* Normal color, not green */
+      color: #e0e0e0;
     }
+
     input[type=text] {
       width: 60%;
       padding: 8px;
@@ -57,6 +68,7 @@
       background: #0d0d0d;
       color: #fff;
     }
+
     button {
       padding: 8px 15px;
       border: none;
@@ -66,16 +78,20 @@
       cursor: pointer;
       transition: 0.3s;
     }
+
     button:hover {
       background-color: #00994d;
     }
+
     .feedback {
       margin-top: 10px;
       font-weight: bold;
     }
+
     .correct {
       color: #00ff00;
     }
+
     .wrong {
       color: #ff3333;
     }
@@ -83,12 +99,6 @@
 </head>
 <body>
   <div class="container">
-
-    <!-- Banner Image -->
-    <div class="banner">
-      <img src="image.jpeg" alt="Banner">
-    </div>
-
     <h1>NAVTTC Day 6 Exercise - OSINT</h1>
 
     <div class="question">
@@ -168,7 +178,7 @@
       }
     }
 
-    // Add Enter key detection for all inputs
+    // Enter key detection
     document.querySelectorAll("input[type=text]").forEach(input => {
       input.addEventListener("keypress", function(event) {
         if (event.key === "Enter") {
